# archsci-dataset

./: ._.venv  .gitignore  CITATION.cff  README.md  pyproject.toml  pyproject.toml.orig  pyproject.toml.poetry  spacy-llm.py  tt  tt2  tt3
archsci_dataset/: 00001.md  __init__.py  __main__.py  cli.py  convert.py  gemini.py  generate_chunks.py  preprocess_footnotes.py  preprocess_html_tag.py  semantic_chunk.py  sep_sentences.py  similarity.py  test01.py  test02.py  test03.py  test04.py
data/journals/: 00001.md  00002.md  00003.md  00004.md  00005.md  00006.md  00007.md  00008.md  00009.md
scripts/: semver-check.sh
src/archsci_dataset/: __init__.py
tests/: test_cli.py
