[project]
name = "archsci-dataset"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jason Zou", email = "qzou@lakeheadu.ca" }
]
dependencies = [
    "typer>=0.15.1",
    "saxonche>=12.5.0",
    "loguru>=0.7.3",
    "sentence-transformers>=3.4.1",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "langchain-text-splitters>=0.3.6",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
convert = { cmd = ["python", "-marchsci_dataset", "convert"] }
preprocess = { cmd = ["python", "-marchsci_dataset", "preprocess"] }
preprocess_footnotes = { cmd = ["python", "-marchsci_dataset", "preprocess_footnotes"] }


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/archsci_dataset"]
